# DayLight

./: .gitignore  README.md
.cursor/plans/: fix_week_optimization_timing_65f24a44.plan.md
clb-app/backend/: .dockerignore  .env  .env.example  METRICS_CALCULATION.md  PRESAGE_PROTOCOL.md  docker-compose.yml  requirements.txt  run.sh
clb-app/backend/app/: Dockerfile  __init__.py  main.py  models.py
clb-app/backend/app/routers/: __init__.py  baseline.py  budget.py  calendar.py  camera.py  events.py  optimize.py  presage.py  recovery.py  team.py
clb-app/backend/app/services/: __init__.py  cognitive_calculator.py  cognitive_load.py  event_classifier.py  google_calendar.py  metrics_buffer.py  schedule_optimizer.py  smartspectra.py  user_baseline.py
clb-app/backend/app/utils/: __init__.py  mock_data.py
clb-app/backend/presage/: BUILD.md  CMakeLists.txt  CONTEXT.md  Dockerfile  presage_daemon.cpp
clb-app/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
clb-app/frontend/src/: App.jsx  index.css  main.jsx
clb-app/frontend/src/components/: BudgetGauge.jsx  CalendarConnect.jsx  CalendarWeekView.jsx  CameraFeed.jsx  CostBreakdownModal.jsx  Dashboard.jsx  ErrorBoundary.jsx  EventCard.jsx  FlexibilityWizard.jsx  MeetingEnrichForm.jsx  OptimizationPanel.jsx  RecoverySuggestions.jsx  SageMode.jsx  TeamDashboard.jsx  WeeklyHeatmap.jsx
clb-app/frontend/src/hooks/: useBudget.js  useEvents.js  useGoogleCalendar.js  useOptimize.js  usePresage.js
clb-app/frontend/src/pages/: Analysis.jsx  Camera.jsx  Home.jsx  Onboarding.jsx
(+1 files in other folders)
